# hexlet-python

./: .gitignore  README.md  chore.ipynb  http.txt
00_python-basics/: encrypt.py  get_age_difference.py  (+8 more)
12_python-testing/hexlet_pytest/: pyproject.toml
12_python-testing/hexlet_pytest/hexlet_pytest/: cart.py  exception.py  fancy.py  set_functions.py  without.py
12_python-testing/hexlet_pytest/tests/: test_cart.py  test_set.py
12_python-testing/hexlet_pytest/tests/old/: _test_without.py
26_python-flask/: Makefile  README.md  data.py  pyproject.toml
26_python-flask/flash/: pyproject.toml
26_python-flask/flash/src/: app.py
26_python-flask/flash/src/templates/: index.html
26_python-flask/flash/tests/: test_app.py
26_python-flask/flask_exercises/: app.py  course.py  data.py  pyproject.toml
26_python-flask/flask_exercises-1/flask_exercises/: app.py  data.py  validator.py
26_python-flask/flask_exercises-1/flask_exercises/templates/: bar.html  index.html
26_python-flask/flask_exercises-1/flask_exercises/templates/courses/: index.html  new.html
26_python-flask/flask_exercises-1/flask_exercises/templates/users/: index.html  show.html
26_python-flask/flask_exercises-2/: Makefile  pyproject.toml  test.ipynb
26_python-flask/flask_exercises-2/flask_example/: data.py  example.py  repo.py  session.txt  session_example.py  users_handling.py
26_python-flask/flask_exercises-2/flask_example/templates/: index.html  test.html
26_python-flask/flask_exercises-2/flask_example/templates/course/: view.html
26_python-flask/flask_exercises-2/flask_example/templates/courses/: view.html
26_python-flask/flask_exercises-2/flask_example/templates/session/: index.html  session-setup.html
26_python-flask/flask_exercises-2/flask_example/templates/users/: index.html  show.html
26_python-flask/flask_exercises-3-crud-create/: README.md
26_python-flask/flask_exercises-3-crud-create/src/: repository.py
26_python-flask/flask_exercises-3-crud/src/: app.py  data.py
26_python-flask/flask_exercises-3-crud/tests/: test_app.py
26_python-flask/flask_exercises-cookies/: pyproject.toml
26_python-flask/flask_exercises-crud/: Makefile  README.md
26_python-flask/flask_exercises-crud-cookies/: README.md
26_python-flask/flask_exercises-crud-cookies/src/: app.py
26_python-flask/flask_exercises-crud-cookies/src/templates/: index.html
26_python-flask/flask_exercises-crud-create/: README.md
26_python-flask/flask_exercises-crud-create-update-delete/: README.md
26_python-flask/flask_exercises-crud-create-update-delete/src/templates/: index.html
26_python-flask/flask_exercises-crud-create/src/: app.py  repository.py
26_python-flask/flask_exercises-crud-create/src/templates/: base.html
26_python-flask/flask_exercises-crud-create/tests/: test_app.py
26_python-flask/flask_exercises-crud/src/templates/: index.html
26_python-flask/flask_exercises-database/: Makefile  README.md  build.sh  init.sql  pyproject.toml
26_python-flask/flask_exercises-database/src/: app.py  repository.py  validator.py
26_python-flask/flask_exercises-database/src/templates/: index.html
26_python-flask/flask_exercises-session/src/: app.py
26_python-flask/flask_exercises-session/src/templates/: index.html
26_python-flask/flask_exercises-session/tests/: test_app.py
26_python-flask/flask_exercises/flask_exercises/: app.py  validator.py
26_python-flask/flask_exercises/flask_exercises/templates/: index.html
26_python-flask/flask_exercises/templates/: index.html
26_python-flask/flask_exercises/templates/users/: index.html  indexx.html  show.html
26_python-flask/hexlet-flask/: pyproject.toml
26_python-flask/hexlet-flask-sample/: pyproject.toml
26_python-flask/hexlet-flask-sample/src/: app.py
26_python-flask/hexlet-flask/src/: validator.py
26_python-flask/hexlet-flask/src/templates/: index.html
26_python-flask/hexlet-flask/tests/: test_app.py
26_python-flask/post-form/: Makefile
26_python-flask/post-form/src/: app.py  data.py
26_python-flask/python-sql/: Makefile  README.md  hello.py  init_products.sql  pyproject.toml
26_python-flask/python-sql/src/: connection.py  context_managers.py  cursor.py  dao.py  query.py  sample.py
27_python-advanced-testing/app/: Makefile  README.md  pyproject.toml
27_python-advanced-testing/app/src/: client.py  fileutils.py  htmlutils.py  utils.py  webutils.py
27_python-advanced-testing/app/src/scripts/: main.bak  main.py
27_python-advanced-testing/app/test_data/: iff.txt
27_python-advanced-testing/app/tests/: test_fileutils.py  test_htmlutils.py  test_utils.py  test_web_utils.py
29_python-django-basics/simple_journal/: main.py  manage.py  pyproject.toml
29_python-django-basics/simple_journal/simple_journal/: asgi.py  factories.py  settings.py  urls.py  wsgi.py
29_python-django-basics/simple_journal/simple_journal/articles/: apps.py  forms.py  models.py  urls.py  views.py
29_python-django-basics/simple_journal/simple_journal/categories/: apps.py  urls.py  views.py
29_python-django-basics/simple_journal/simple_journal/templates/: 404.html  about.html  index.html  layout.html  navigation.html
30_python-django-orm/python-django-orm-blog/: Makefile  README.md  pyproject.toml
30_python-django-orm/python-django-orm-blog/python_django_orm_blog/: settings.py  urls.py  views.py
30_python-django-orm/python-django-orm-blog/python_django_orm_blog/blog/: models.py
30_python-django-orm/python-django-orm-blog/python_django_orm_blog/templates/: index.html  layout.html
flask_samples/flask-app/: Makefile  pyproject.toml
flask_samples/flask-app/flask_app/: data.py  example.py  main.py  user.py
flask_samples/flask-app/flask_app/templates/: greet.html  index.html  layout.html
hexlet_pytest/: errors&settings.txt  pyproject.toml
hexlet_pytest/hexlet_pytest/: client_lib.py  foreach.py  get_files_count.py  process_html.py
hexlet_pytest/tests/: fake_client.py  github_fake.py  test_clent_lib.py  test_get_files_count.py  test_gitlib.py  test_prettify_html_file.py  test_process_html.py
hexlet_pytest/tests/fixtures/: before.html
(+566 files in other folders)
