[tool.poetry]
name = "flask-exercises"
version = "0.1.0"
description = "Solutions to exercises foFlask"
authors = ["Pavel Soroka <40a.pvl@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_exercises"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.1"
Faker = "^22.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
