[tool.poetry]
name = "hexlet-flask"
version = "0.1.0"
description = "Example application"
authors = ["Pavel Soroka <40a.pvl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.1"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
