[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "faker>=37.3.0",
    "pygithub>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "pytest-cov>=5.0.0",
    "schema>=0.7.7",
    "pook>=2.1.3",
]

[project.scripts]
hexlet-python-package = "src.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
