[project]
name = "simple-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-bootstrap4>=24.4",
    "django>=5.1.3",
    "factory-boy>=3.3.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]
